FIX: background image in testemoinial1 not showing up

--- a/css/styles.css
+++ b/css/styles.css
@@ -126,7 +126,7 @@ body {
 
 
 .first {
-background-image: url(/images/bg-pattern-quotation.svg);
+background-image: url(../images/bg-pattern-quotation.svg);
 background-repeat: no-repeat;
 background-position:80% 0%;
   background-color: hsl(263, 55%, 52%);
